# minimal-lpsolve-example

./: .gitignore  CMakeLists.txt  README.md
src/: crop_example.cpp
